# ssh-tauri

./: .gitignore  README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  mobile.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  handler.rs  io_loop.rs  lib.rs  main.rs  state.rs
src/components/: ConfigDialog.tsx  KeyToolbar.tsx  LoginForm.tsx  TerminalHeader.tsx  TerminalView.tsx
src/constants/: terminal.ts
src/hooks/: useAutoOrientation.ts  useTerminalTheme.ts  useTwoFingerScroll.ts
src/utils/: configStore.ts  keyNormalizer.ts  platform.ts
