[package]
name = "ssh-tauri"
version = "0.1.0"
description = "A Tauri application for SSH management."
authors = ["ahaoboy"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ahaoboy/ssh-tauri"
homepage = "https://github.com/ahaoboy/ssh-tauri"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
# tauri-plugin-media = { version = "0.1" }
tauri-plugin-updater = { version = "2" }
tauri-plugin-single-instance = { version = "2" }
